--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diary</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="indexStyles.css">
 </head>
 <body>
     <div class="container">
         <h1>お帰り、なんちゃらなんちゃら</h1>
+        <div class="title">
+            <input type="text" id="title" placeholder="タイトルを入力してください">
+        </div>
         <textarea id="diary" placeholder="ここに入力してください"></textarea>
         <a href=""><button type="button">保存</button></a>
     </div>
