--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -3,28 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Login-Diary</title>
-    <link rel="stylesheet" href="LoginStyles.css">
+    <link rel="stylesheet" href="loginstyles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        .background-image {
+            background-image: url(images/login.jpg);
+            background-size: cover;
+            background-color:rgba(255,255,255,0.6);
+            background-blend-mode:lighten;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
-
 <body>
-    <div class="row res">
-        <div class="Diary">
-            <div>
-                <h1>Diary</h1>
+    <div class="background-image" >
+        <div class="row res">
+            <div class="Diary">
+                <div>
+                    <h1>Diary</h1>
+                </div>
+                <form action="menu.html">
+                    <input type="Username" maxlength="20" placeholder="ユーザー名"
+                        required>
+                    <input type="password" maxlength="20" placeholder="パスワード" required>
+                    <div class="submit">
+                        <a href="signup.html">新規登録</a>
+                    </div>
+                    <hr>
+                    <!-- <div class="button">
+                    <a href="menu.html">ログイン</a>
+                    </div> -->
+                    <input class="button" type="submit" value="ログイン">
+                </form>
             </div>
-            <form action="#">
-                <input type="Username" maxlength="20" placeholder="ユーザー名"
-                    required>
-                <input type="password" maxlength="20" placeholder="パスワード" required>
-                <div class="submit">
-                    <button type="submit" class="login">ログイン</button>
-                </div>
-                <hr>
-                <div class="button">
-                    <a href="Signup.html">新規登録</a>
-                </div>
-            </form>
         </div>
     </div>
     <footer>
