更新＆削除ボタンとJS完了

--- a/src/main/webapp/myData.html
+++ b/src/main/webapp/myData.html
@@ -12,24 +12,30 @@
   </div>
  <div class="list">
    <h2>一覧</h2>
-   <form action="#" method="#" name="#">
+   <form action="#" method="#" name="actionform">
       <ul>
         <li class="title1">
-          <h5>title1</h5>
+          <input type="hidden" name="id" value="${diary_id}">
+          <h5>title</h5>
           <button class="update btn">更新</button>
           <button class="delete btn">削除</button>
         </li>
-        <li>
+        <li >
+          <input type="hidden" name="id" value="2">
           <h5 >title2</h5>
           <button class="update btn">更新</button>
           <button class="delete btn">削除</button>
         </li>
         <li>
+          <input type="hidden" name="id" value="3">
           <h5>title3</h5>
           <button class="update btn">更新</button>
           <button class="delete btn">削除</button>
         </li>
       </ul> 
+      <input id="diaryId" type="hidden" name="diaryId">
+      <!-- こうしんなら"update, 削除なら"dalete" -->
+      <input id="action" type="hidden" name="action" value="update">
     </form>
   </div> 
   <script src="js/mydata.js"></script>
@@ -38,6 +44,4 @@
 
 
 
-<!--   
-<input id="diaryId" type="hidden" name="diaryId">
-<input id="action" type="hidden" name="action"> -->
+  
